--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2019",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
-    "outDir": "./api",                                   /* Specify an output folder for all emitted files. */
+    // "outDir": "./api",                                   /* Specify an output folder for all emitted files. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
