--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc --watch",
-    "public": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "build": "rimraf dist && tsc",
+    "deploy": "npm run build && vercel --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "12",
+    "@types/express": "^4.17.13",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@vercel/node": "^2.1.0"
+    "express": "^4.18.1"
   }
 }
